--- a/autossh/hostkeys.conf
+++ b/autossh/hostkeys.conf
@@ -253,3 +253,9 @@ dcdn
 twin05a43.sandai.net  qiaolei  SNYOZL913V
 twin05a43.sandai.net  root1   6ELE9DY4BS
 
+# inner dcdn test
+192.168.102.100 root xunlei
+192.168.102.101 root xunlei
+192.168.102.102 root xunlei
+192.168.102.103 root xunlei
+192.168.102.104 root xunlei
