--- a/vim/.vim/cscope-15.8a/doc/Makefile
+++ b/vim/.vim/cscope-15.8a/doc/Makefile
@@ -78,28 +78,28 @@ am__installdirs = "$(DESTDIR)$(man1dir)"
 NROFF = nroff
 MANS = $(man_MANS)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/qiaolei/.vim/cscope-15.8a/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/rayqiao/.vim/cscope-15.8a/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /home/qiaolei/.vim/cscope-15.8a/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/qiaolei/.vim/cscope-15.8a/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/qiaolei/.vim/cscope-15.8a/missing --run automake-1.11
-AWK = mawk
+AUTOCONF = ${SHELL} /home/rayqiao/.vim/cscope-15.8a/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/rayqiao/.vim/cscope-15.8a/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/rayqiao/.vim/cscope-15.8a/missing --run automake-1.11
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
 CPP = gcc -E
 CPPFLAGS = 
 CURSES_INCLUDEDIR = 
-CURSES_LIBS = 
+CURSES_LIBS = -lncurses
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = /bin/grep -E
+EGREP = /usr/bin/grep -E
 EXEEXT = 
-GREP = /bin/grep
+GREP = /usr/bin/grep
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -112,7 +112,7 @@ LEX_OUTPUT_ROOT = lex.yy
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/qiaolei/.vim/cscope-15.8a/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/rayqiao/.vim/cscope-15.8a/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = cscope
@@ -129,10 +129,10 @@ STRIP =
 VERSION = 15.8a
 YACC = bison -y
 YFLAGS = 
-abs_builddir = /home/qiaolei/.vim/cscope-15.8a/doc
-abs_srcdir = /home/qiaolei/.vim/cscope-15.8a/doc
-abs_top_builddir = /home/qiaolei/.vim/cscope-15.8a
-abs_top_srcdir = /home/qiaolei/.vim/cscope-15.8a
+abs_builddir = /home/rayqiao/.vim/cscope-15.8a/doc
+abs_srcdir = /home/rayqiao/.vim/cscope-15.8a/doc
+abs_top_builddir = /home/rayqiao/.vim/cscope-15.8a
+abs_top_srcdir = /home/rayqiao/.vim/cscope-15.8a
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -161,7 +161,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/qiaolei/.vim/cscope-15.8a/install-sh
+install_sh = ${SHELL} /home/rayqiao/.vim/cscope-15.8a/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -170,7 +170,7 @@ mandir = ${datarootdir}/man
 mkdir_p = /bin/mkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /home/qiaolei
+prefix = /home/rayqiao
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
