--- a/tool/autosshtool/hostkeys.conf
+++ b/tool/autosshtool/hostkeys.conf
@@ -1,4 +1,3 @@
-twin05a43.sandai.net  root1   6ELE9DY4BS
 
 # inner dcdn test
 192.168.102.100 root xunlei
@@ -6,3 +5,7 @@ twin05a43.sandai.net  root1   6ELE9DY4BS
 192.168.102.102 root xunlei
 192.168.102.103 root xunlei
 192.168.102.104 root xunlei
+
+# inner ssh 
+twin05a43.sandai.net  root1   6ELE9DY4BS
+
